--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/styles.css" />
+        <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.main.css %>" />
         <title>ECSO</title>
     </head>
     <body>
         <div id="app"></div>
-        <script src="/bundle.js"></script>
+        <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
     </body>
 </html>
